--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,14 +7,15 @@
     android:scaleType="centerInside"
     android:animateLayoutChanges="true">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        >
         <TextView
             android:id="@+id/timer"
             android:layout_width="fill_parent"
@@ -32,8 +33,11 @@
         <TextView
             android:id="@+id/question"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/point"/>
+            android:layout_height="200dip"
+            android:background="#fdf2b0"
+            android:text="問題文"
+            android:padding="10dp"
+            android:textSize="18sp" />
         <Button
             android:id="@+id/one"
             android:layout_width="fill_parent"
