--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -32,4 +32,15 @@
         android:textSize="40sp"
         android:layout_below="@+id/point"
         android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:id="@+id/retry"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/point"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="99dp"
+        android:text="Retry？"
+        tools:ignore="UnknownId" />
 </RelativeLayout>
