6回目のコミット　問題をランダム出題

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -33,6 +33,7 @@
             android:id="@+id/question"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:textSize="24sp"
             android:layout_below="@+id/point"/>
         <Button
             android:id="@+id/one"
