--- a/app/src/main/res/layout/activity_end.xml
+++ b/app/src/main/res/layout/activity_end.xml
@@ -51,5 +51,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3712506788718089/1977119518" />
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
+    //ads:adUnitId="ca-app-pub-3712506788718089/1977119518"
 </RelativeLayout>
