--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -24,7 +24,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="65dp" />
+            android:layout_marginTop="3dp"
+            android:textSize="24dp"/>
 
         <TextView
             android:id="@+id/miss"
@@ -33,7 +34,8 @@
             android:layout_below="@+id/timer"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp" />
+            android:layout_marginTop="0dp"
+            android:textSize="24dp"/>
 
         <TextView
             android:id="@+id/point"
@@ -42,17 +44,18 @@
             android:layout_below="@+id/miss"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="-1dp" />
+            android:layout_marginTop="-1dp"
+            android:textSize="24dp"/>
 
         <TextView
             android:id="@+id/question"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_below="@+id/point"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="100dp"
-            android:textSize="24sp" />
+            android:layout_marginTop="0dp"
+            android:textSize="24dp" />
 
         <Button
             android:id="@+id/one"
@@ -62,6 +65,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
+            android:textSize="20sp"
             tools:textSize="24sp" />
 
         <Button
@@ -72,6 +76,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
+            android:textSize="20sp"
             tools:textSize="24sp" />
 
         <Button
@@ -82,6 +87,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
+            android:textSize="20sp"
             tools:textSize="24sp" />
 
         <Button
@@ -92,13 +98,19 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
+            android:textSize="20sp"
             tools:textSize="24sp" />
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="fill_parent"
+            android:layout_height="15dp"
+            android:layout_below="@+id/four"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="0dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />
     </RelativeLayout>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"  />
+
 </FrameLayout>
