--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,49 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f0e68c"
     tools:context=".StartActivity"
+    android:background="@drawable/back"
     >
 
     <TextView
-        android:id="@+id/title1"
+        android:id="@+id/title"
         android:layout_width="385dp"
-        android:layout_height="159dp"
+        android:layout_height="250dp"
         android:layout_centerHorizontal="true"
-        android:text="Quiz"
+        android:text="Quiz\nCollege"
+        android:layout_centerInParent="true"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="#0400ff"
         android:textSize="100sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/title2"
-        android:layout_width="385dp"
-        android:layout_height="159dp"
-        android:layout_below="@+id/title1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="156dp"
-        android:text="College"
-        android:textColor="#0400ff"
-        android:textSize="100sp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
-
+    
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/start"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="445dp"
-        tools:ignore="MissingConstraints" />
+        ads:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/start"
@@ -55,9 +43,11 @@
         android:layout_below="@+id/copy"
         android:layout_alignParentStart="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
+        android:onClick="onClick"
         android:text="Start"
+        android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,18 +55,37 @@
         app:layout_constraintTop_toBottomOf="@+id/copy"
         tools:textSize="30sp" />
 
+    <Button
+        android:id="@+id/show"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/copy"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:onClick="onPolicy"
+        android:text="プライバシーポリシー"
+        android:textSize="15dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start"
+        tools:textSize="10sp" />
+
     <TextView
         android:id="@+id/copy"
         android:layout_width="385dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/title2"
+        android:layout_height="0dp"
+        android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="332dp"
         android:text="(C)2018 Yamasho"
         android:textColor="#0400ff"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="15sp"
+        app:layout_constraintTop_toBottomOf="@+id/title"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:textSize="24sp" />
+        tools:textSize="24dp" />
 </android.support.constraint.ConstraintLayout>
