--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -10,19 +10,20 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="385dp"
+        android:layout_width="0dp"
         android:layout_height="250dp"
-        android:layout_centerHorizontal="true"
-        android:text="Quiz\nCollege"
         android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="24dp"
+        android:text="Quiz\nCollege"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="#0400ff"
-        android:textSize="100sp"
+        android:textSize="90sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    
+
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="fill_parent"
@@ -31,7 +32,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:adUnitId="ca-app-pub-3712506788718089/1977119518"
         ads:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp" />
@@ -81,11 +82,12 @@
         android:layout_height="0dp"
         android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="24dp"
         android:text="(C)2018 Yamasho"
         android:textColor="#0400ff"
         android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
         tools:textSize="24dp" />
 </android.support.constraint.ConstraintLayout>
